change references to spc to sknano

--- a/doc/source/sknano/static/less/sknano-bootstrap.less
+++ b/doc/source/sknano/static/less/sknano-bootstrap.less
@@ -1,4 +1,4 @@
-// spc bootstrap settings
+// sknano bootstrap settings
 @import "bootstrap/bootstrap.less";
 @import "bootstrap/responsive.less";
 
