--- a/doc/source/sknano/static/less/sknano-extend.less
+++ b/doc/source/sknano/static/less/sknano-extend.less
@@ -1,11 +1,11 @@
-//spc extend settings
+//sknano extend settings
 
 body {
-	background-color: rgb(249,250,245);
+    background-color: rgb(249,250,245);
 }
 
 .container {
-	width: 80%;
+    width: 80%;
 }
 
 .main {
@@ -16,7 +16,7 @@ body {
   box-shadow: 0 0 3px #888;
 }
 
-@import "spc-header.less";
-@import "spc-content.less";
-@import "spc-rightsidebar.less";
-@import "spc-footer.less";
+@import "sknano-header.less";
+@import "sknano-content.less";
+@import "sknano-rightsidebar.less";
+@import "sknano-footer.less";
