--- a/doc/source/sknano/static/css/pygments.css
+++ b/doc/source/sknano/static/css/pygments.css
@@ -26,7 +26,7 @@
 	overflow-x:auto
 }
 
-div#spc-section-body td.linenos pre {
+div#sknano-section-body td.linenos pre {
     padding: 5px 0px;
     border: 0;
     background-color: transparent;
