--- a/doc/source/sknano/static/less/sknano-header.less
+++ b/doc/source/sknano/static/less/sknano-header.less
@@ -1,25 +1,24 @@
-// settings for 
+// settings for
 // 1) .header
-//		header block is found on the top of the website
-// spc-navbar, spc-header-searchbar found inside .header
-// 2) .spc-navbar
-// 3) .spc-header-searchbar
+// header block is found on the top of the website
+// sknano-navbar, sknano-header-searchbar found inside .header
+// 2) .sknano-navbar
+// 3) .sknano-header-searchbar
 
-@import "spc-utils.less";
+@import "sknano-utils.less";
 
 .header {
-	.margin(@top: 15px, @bottom: 15px);
+    .margin(@top: 15px, @bottom: 15px);
 }
 
-.spc-navbar {
-	.margin (@top: 15px, @bottom: 5px);
-	.nav-pills {
-		margin-bottom: 0px;
-		font-size: 12px;
-		
-		>li >a {
-			padding-top: 2.5px;
-			padding-bottom: 2.5px;
-		}
-	}
+.sknano-navbar {
+    .margin (@top: 15px, @bottom: 5px);
+    .nav-pills {
+        margin-bottom: 0px;
+        font-size: 12px;
+        >li >a {
+            padding-top: 2.5px;
+            padding-bottom: 2.5px;
+        }
+    }
 }
